tests/errors/syntax.NewlineInQuotedString.art
print {
    done
}
this "something else

"

print "hello"